# study

./: .gitignore  README.md  build.gradle  gradle.properties  keystore.jks  kotlin.md  settings.gradle  transform_config.properties
app/: build.gradle  multiDexKeep.pro  multiDexKeep.txt  multidex-config.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: startup.json  (+2 more)
flutter_module/: .gitignore  README.md  pubspec.yaml
flutter_module/assets/: device.json
flutter_module/gradle/wrapper/: gradle-wrapper.properties
flutter_module/lib/: api.dart  app.dart  appbar.dart  base.dart  base_response.dart  click_text.dart  main.dart  test.dart  util.dart
flutter_module/test/: widget_test.dart
gradle/wrapper/: gradle-wrapper.properties
lib_annotation/: build.gradle
lib_annotation_transform/: build.gradle  reademe.MD
lib_core/: build.gradle  consumer-rules.pro
lib_core/src/main/: AndroidManifest.xml
lib_core_api/: build.gradle
lib_core_api/src/main/: AndroidManifest.xml
lib_core_util/: build.gradle
lib_core_util/src/main/: AndroidManifest.xml
lib_database/: build.gradle  consumer-rules.pro  proguard-rules.pro  room.MD
lib_ffmpeg/: CMakeLists.txt  build.gradle
lib_ffmpeg/src/main/: AndroidManifest.xml
lib_ffmpeg/src/main/java/com/study/doc/third/: FFmpegUtil.kt
lib_ffmpeg/src/main/jni/: native_lib.cpp
lib_ffmpeg/src/main/jni/libavutil/: version.h
lib_glide/: build.gradle  consumer-rules.pro
lib_glide/doc/: log.txt
lib_okhttp/: build.gradle
lib_picasso/: build.gradle  consumer-rules.pro
plugin/: .gitignore
(+254 files in other folders)
